--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,17 @@
 
     <string name="app_name">CIPDFCAPTURE</string>
     <string name="hello_world">Hello world!</string>
+
+
+    <string name="title_section1">About</string>
+    <string name="title_section2">Find</string>
+    <string name="title_section3">Tools</string>
+    <string name="title_section4">Administration</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="action_example">Example action</string>
     <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
+    <string name="action_logoff">Logoff</string>
 
 </resources>
