--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,6 @@
 <resources>
 
     <string name="app_name">CIPDFCAPTURE</string>
-    <string name="hello_world">Hello world!</string>
-
 
     <string name="title_section1">About</string>
     <string name="title_section2">Capture PDF</string>
@@ -15,5 +13,9 @@
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_logoff">Logoff</string>
+
+    <string name="navdrawer1">Capture PDF</string>
+    <string name="navdrawer2">Upload PDF</string>
+    <string name="navdrawer3">Download PDF</string>
 
 </resources>
