--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,12 +34,26 @@
     <string name="title_list_cprofiles">Connection Profiles</string>
     <string name="summary_list_preference">List of Content Integrators to connect to</string>
     <string name="dialog_title_list_preference">Choose one</string>
+
     <string name="title_screen_preference">Screen preference</string>
     <string name="summary_screen_preference">Shows another screen of preferences</string>
     <string name="title_fragment_preference">Fragment preference</string>
     <string name="summary_fragment_preference">Shows another fragment of preferences</string>
     <string name="title_next_screen_toggle_preference">Toggle preference</string>
     <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
+    <string name="title_next_screen_hostname_preference">Edit Hostname</string>
+    <string name="summary_next_screen_hostname_preference">Hostname of the CI Server</string>
+    <string name="title_next_screen_domain_preference">Edit Domain</string>
+    <string name="summary_next_screen_domain_preference">Domain of the CI Server</string>
+    <string name="title_next_screen_port_preference">Edit Port Number</string>
+    <string name="summary_next_screen_port_preference">Port Number of the CI Server</string>
+    <string name="title_next_screen_username_preference">Edit Username</string>
+    <string name="summary_next_screen_username_preference">Username of the CI Server</string>
+    <string name="title_next_screen_password_preference">Edit Password</string>
+    <string name="summary_next_screen_password_preference">Password of the CI Server</string>
+    <string name="title_next_screen_button_preference">Save CI server info</string>
+    <string name="summary_next_screen_button_preference">Tap to save a connection profile to a CI server</string>
+
     <string name="title_intent_preference">Intent preference</string>
     <string name="summary_intent_preference">Launches an Activity from an Intent</string>
     <string name="title_my_preference">My preference</string>
