--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,23 +24,31 @@
     <string name="title_edittext_preference">Edit text preference</string>
     <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
     <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
+    <string name="dialog_title_ciprofile_preference">Enter the name of the profile</string>
+    <string name="dialog_title_hostname_preference">Enter the Hostname</string>
+    <string name="dialog_title_domain_preference">Enter the Domain</string>
+    <string name="dialog_title_port_preference">Enter the Port</string>
+    <string name="dialog_title_username_preference">Enter the Username</string>
+    <string name="dialog_title_password_preference">Enter the Password</string>
     <string name="title_checkbox_preference">Checkbox preference</string>
     <string name="summary_checkbox_preference">This is a checkbox</string>
     <string name="hello_world">Hello world!</string>
     <string name="inline_preferences">In-line preferences</string>
     <string name="dialog_based_preferences">Dialog-based preferences</string>
-    <string name="launch_preferences">Launch preferences</string>
-    <string name="preference_attributes">Preference attributes</string>
+    <string name="CI_config_preferences">Content Integrator preferences</string>
+    <string name="oresources_attributes">Other Resources</string>
     <string name="title_list_cprofiles">Connection Profiles</string>
     <string name="summary_list_preference">List of Content Integrators to connect to</string>
     <string name="dialog_title_list_preference">Choose one</string>
 
-    <string name="title_screen_preference">Screen preference</string>
-    <string name="summary_screen_preference">Shows another screen of preferences</string>
+    <string name="CI_config_screen_preference">New CI Connection <Profile></Profile></string>
+    <string name="CI_config_summary_screen_preference">Add info for new CI Server</string>
     <string name="title_fragment_preference">Fragment preference</string>
     <string name="summary_fragment_preference">Shows another fragment of preferences</string>
     <string name="title_next_screen_toggle_preference">Toggle preference</string>
     <string name="summary_next_screen_toggle_preference">Preference that is on the next screen but same hierarchy</string>
+    <string name="title_next_screen_ciprofile_preference">Edit Profile Name</string>
+    <string name="summary_next_screen_ciprofile_preference">Name of the connection profile</string>
     <string name="title_next_screen_hostname_preference">Edit Hostname</string>
     <string name="summary_next_screen_hostname_preference">Hostname of the CI Server</string>
     <string name="title_next_screen_domain_preference">Edit Domain</string>
@@ -48,14 +56,14 @@
     <string name="title_next_screen_port_preference">Edit Port Number</string>
     <string name="summary_next_screen_port_preference">Port Number of the CI Server</string>
     <string name="title_next_screen_username_preference">Edit Username</string>
-    <string name="summary_next_screen_username_preference">Username of the CI Server</string>
+    <string name="summary_next_screen_username_preference">CI Server Username</string>
     <string name="title_next_screen_password_preference">Edit Password</string>
-    <string name="summary_next_screen_password_preference">Password of the CI Server</string>
+    <string name="summary_next_screen_password_preference">CI Server Password</string>
     <string name="title_next_screen_button_preference">Save CI server info</string>
     <string name="summary_next_screen_button_preference">Tap to save a connection profile to a CI server</string>
 
-    <string name="title_intent_preference">Intent preference</string>
-    <string name="summary_intent_preference">Launches an Activity from an Intent</string>
+    <string name="title_intent_preference">Get Systemware Help</string>
+    <string name="summary_intent_preference">Visits www.systemware.com</string>
     <string name="title_my_preference">My preference</string>
     <string name="summary_my_preference">This is a custom counter preference</string>
     <string name="title_advanced_toggle_preference">Haunted preference</string>
@@ -65,5 +73,12 @@
     <string name="summary_parent_preference">This is visually a parent</string>
     <string name="title_child_preference">Child checkbox preference</string>
     <string name="summary_child_preference">This is visually a child</string>
+
+    <string name="ci_profile">profilename_preference</string>
+    <string name="ci_hostname">hostname_preference</string>
+    <string name="ci_domain">domain_preference</string>
+    <string name="ci_port">port_preference</string>
+    <string name="ci_username">username_preference</string>
+    <string name="ci_password">password_preference</string>
 
 </resources>
