--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,25 +19,35 @@
     <string name="navdrawer3">Download PDF</string>
     <string name="title_edittext_preference">Edit text preference</string>
     <string name="summary_edittext_preference">An example that uses an edit text dialog</string>
-    <string name="dialog_title_edittext_preference">Enter your favorite animal</string>
+
     <string name="dialog_title_ciprofile_preference">Enter the name of the profile</string>
     <string name="dialog_title_hostname_preference">Enter the Hostname</string>
     <string name="dialog_title_domain_preference">Enter the Domain</string>
     <string name="dialog_title_port_preference">Enter the Port</string>
     <string name="dialog_title_username_preference">Enter the Username</string>
     <string name="dialog_title_password_preference">Enter the Password</string>
+
+    <string name="dialog_title_actiontimeout_preference">Enter the Action Timeout (Seconds)</string>
+    <string name="dialog_title_lilotimeout_preference">Enter the Login/Logoff Timeout (Seconds)</string>
+    <string name="dialog_title_uploadtimeout_preference">Enter the Upload Timeout (Seconds)</string>
+
     <string name="title_checkbox_preference">Checkbox preference</string>
     <string name="summary_checkbox_preference">This is a checkbox</string>
     <string name="hello_world">Hello world!</string>
     <string name="inline_preferences">In-line preferences</string>
     <string name="dialog_based_preferences">Dialog-based preferences</string>
     <string name="CI_config_preferences">Content Integrator preferences</string>
+    <string name="client_config_preferences">Client preferences</string>
+
     <string name="oresources_attributes">Other Resources</string>
+    <string name="timeoutresources_attributes">Action Behaviors</string>
     <string name="title_list_cprofiles">Connection Profiles</string>
     <string name="summary_list_preference">List of Content Integrators to connect to</string>
     <string name="dialog_title_list_preference">Choose one</string>
     <string name="CI_config_screen_preference">New CI Connection <Profile /></string>
     <string name="CI_config_summary_screen_preference">Add info for new CI Server</string>
+    <string name="CI_timeout_screen_preference">Edit Timeouts <Profile /></string>
+    <string name="CI_timeout_summary_screen_preference">Modify timeouts for actions</string>
     <string name="title_fragment_preference">Fragment preference</string>
     <string name="summary_fragment_preference">Shows another fragment of preferences</string>
     <string name="title_next_screen_toggle_preference">Toggle preference</string>
@@ -56,10 +66,14 @@
     <string name="summary_next_screen_password_preference">CI Server Password</string>
     <string name="title_next_screen_button_preference">Save CI server info</string>
     <string name="summary_next_screen_button_preference">Tap to save a connection profile to a CI server</string>
-    <string name="title_intent_preference">Get Systemware Help</string>
+    <string name="title_next_screen_actiontimeout_preference">Edit Action Timeout</string>
+    <string name="summary_next_screen_actiontimeout_preference">API transaction timeout (Seconds)</string>
+    <string name="title_next_screen_lilotimeout_preference">Edit Logon/Logoff Timeout</string>
+    <string name="summary_next_screen_lilotimeout_preference">Logon/Logoff timeout (Seconds)</string>
+    <string name="title_next_screen_uploadtimeout_preference">Edit Upload Timeout</string>
+    <string name="summary_next_screen_uploadtimeout_preference">Upload timeout(Seconds)</string>
+    <string name="title_intent_preference">Systemware Website</string>
     <string name="summary_intent_preference">Visits www.systemware.com</string>
-    <string name="title_my_preference">My preference</string>
-
 
     <string name="ci_profile">profilename_preference</string>
     <string name="ci_hostname">hostname_preference</string>
