--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,7 @@
     <string name="title_sectionalt">Capture/Upload PDF</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
+    <string name="action_home">Home</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">About</string>
     <string name="action_logoff">Logoff</string>
